[tool.poetry]
name = "manifest"
version = "0.1.1"
description = "Use an LLM to execute code"
authors = ["Andrew Moffat <arwmoffat@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "README.md",
    "LICENSE",
    "manifest/",
]
exclude = [
    "manifest/**/tests",
    "manifest/**/test_*",
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.1"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
lxml = "^5.2.2"
jsonschema = "^4.23.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pytest = "^8.3.2"
types-jsonschema = "^4.23.0.20240712"
lxml-stubs = "^0.5.1"
black = "^24.8.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
